--- a/css/csstyle.css
+++ b/css/csstyle.css
@@ -3,55 +3,67 @@ text-align: center;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .container{
-    width: 100%; 
+    width: 95%; 
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
-    
-  
-    margin: 0;
+  gap: 25px;
+padding-left: 10px;
+justify-content: center; 
+margin: 50px 0 0 0;
 }
 .box{
     height: 40px;
     background-color: rgb(142, 202, 190);
-    padding: 10px;
+    padding: 13px;
+    margin: 0 30px 0 ;
     border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 30em;
 }
 td,tr{
-width: 200px;
-height: 50px; 
+width: 21em;
+height: 70px; 
 border: 2px solid black;
 text-align: center;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 table{
     border-collapse: collapse;
+    background-color: #eee;
 }
 body{
-  background-color: rgb(167, 169, 169);
+  background-color: rgb(159, 159, 159);
 
 }
 .table-box{
     display: flex;
-    justify-content: center;
+    justify-content: center; 
+    padding: 30px 30px; 
 }
 .button{
     display: flex;
     justify-content: end;
-    padding: 0 80px;
+    padding: 30px 100px;
 
 }
 button{
-   color: #444;
-   font-size: 20px;
-   padding: 1rem 1.5rem ;
-   border: 2px solid #eee;
-   border-radius: .5rem;
-   cursor: pointer;
-   transition: all 1s ease;
-   box-shadow: .5rem .5rem 1rem #ccc
-   -.5rem -.5rem 1rem #fff;
+    background: #ECE9E6;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #FFFFFF, #ECE9E6);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  margin: 0 30px;
+  padding: 10px;
+    border-radius: 20px; 
+  height: 65px;
+    width: 200px; 
+    place-items: center;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; 
+font-size: 22px;
+cursor: pointer;
+border: none;
 }
+button:hover{
+    transform: scale(1.2, 1.2);
+  }
 input{
    width: 98%;
    height: 40px;
